# hcli_hc

./: .gitignore  CHANGELOG  MANIFEST.in  README.rst  manage.py  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
hcli_hc/: __init__.py  __main__.py  config.py  hutils.py  package.py
hcli_hc/cli/: cli.py  error.py  jobqueue.py  jogger.py  locker.py  service.py  streamer.py  template.json
hcli_hc/cli/grbl/: controller.py  device.py  nudger.py
hcli_hc/data/: hcli_hc.1
tests/: test_hc.py
